--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <a href="#" class="login">Log in</a>
                         </li>
                         <li>
-                            <a href="#" id="button">GetHubspotFree</a>
+                            <a href="#" class="button">GetHubspotFree</a>
                         </li>
                     </ul>
                 </div>
@@ -93,7 +93,7 @@
                 <div class="teaser">
                     <h1>There’s a better way to grow.</h1>
                     <p class="text">Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
-                    <a href="#" id="button">GetHubspotFree</a>
+                    <a href="#" class="button">GetHubspotFree</a>
                     <p class="subtext">Get started with FREE tools, and upgrade as you grow</p>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                             <div class="book">
                                 <img src="img/crm-Illustration.svg" alt="">
                             </div>
-                            <a href="#" id="button-learn">Learn More</a>
+                            <a href="#" class="button-learn">Learn More</a>
                         </div>
                         <!--end section left-->
 
@@ -172,7 +172,7 @@
                             <li><i class="fas fa-check-circle"></i> Marketing automation</li>
                             <li><i class="fas fa-check-circle"></i> Analytics</li>
                         </ul>
-                        <a href="#" id="button-learn">Learn More</a>
+                        <a href="#" class="button-learn">Learn More</a>
                     </div>
                     <!--end third subsection left-->
 
@@ -190,7 +190,7 @@
                             <li><i class="fas fa-check-circle"></i> Meeting scheduling</li>
                             <li><i class="fas fa-check-circle"></i> Quotes</li>
                         </ul>
-                        <a href="#" id="button-learn">Learn More</a>
+                        <a href="#" class="button-learn">Learn More</a>
                     </div>
                     <!--end third subsection central-->
 
@@ -208,7 +208,7 @@
                             <li><i class="fas fa-check-circle"></i> Customer feedback</li>
                             <li><i class="fas fa-check-circle"></i> Knowledge base</li>
                         </ul>
-                        <a href="#" id="button-learn">Learn More</a>
+                        <a href="#" class="button-learn">Learn More</a>
                     </div>
                     <!--end third subsection right-->
                 </div>
@@ -232,7 +232,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_agency.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid number">150<span class="più"> +</span></p>
+                                                <p class="grid number">150<span class="piu"> +</span></p>
                                                 <p class="cell-text">HubSpot user groups</p> 
                                             </div>
                                         </div>
@@ -244,7 +244,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_blog.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid number">4.5M<span class="più"> +</span></p>
+                                                <p class="grid number">4.5M<span class="piu"> +</span></p>
                                                 <p class="cell-text">monthly visits</p> 
                                             </div>
                                         </div>
@@ -256,7 +256,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_academy.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid number">155K<span class="più"> +</span></p>
+                                                <p class="grid number">155K<span class="piu"> +</span></p>
                                                 <p class="cell-text">certified professionals</p> 
                                             </div>
                                         </div>
@@ -268,7 +268,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_inbound.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid number">21K<span class="più"> +</span></p>
+                                                <p class="grid number">21K<span class="piu"> +</span></p>
                                                 <p class="cell-text">registered attendees</p> 
                                             </div>
                                         </div>
@@ -287,7 +287,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_connect.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid number">200<span class="più"> +</span></p>
+                                                <p class="grid number">200<span class="piu"> +</span></p>
                                                 <p class="cell-text">integrations</p> 
                                             </div>
                                         </div>
@@ -299,7 +299,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_globe.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid number">6<span class="più"> +</span></p>
+                                                <p class="grid number">6<span class="piu"> +</span></p>
                                                 <p class="cell-text">languages</p> 
                                             </div>
                                         </div>
@@ -311,7 +311,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_followers.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid number">2.6M<span class="più"> +</span></p>
+                                                <p class="grid number">2.6M<span class="piu"> +</span></p>
                                                 <p class="cell-text">csocial followers</p> 
                                             </div>
                                         </div>
@@ -323,7 +323,7 @@
                                         <div class="icon">
                                             <img src="img/growthhub-white-small-1.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid number">5K<span class="più"> +</span></p>
+                                                <p class="grid number">5K<span class="piu"> +</span></p>
                                                 <p class="cell-text">profile and counting</p> 
                                             </div>
                                         </div>
@@ -390,7 +390,7 @@
                     <div class="col menu-left">
                         <h3>Start Growing With HubSpot Today</h3>
                         <p class="text">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
-                        <a href="#" id="button">GetHubspotFree</a>
+                        <a href="#" class="button">GetHubspotFree</a>
                         <p class="subtext">Get started with FREE tools, and upgrade as you grow</p>
                     </div>
                     <div class="col menu-right">
@@ -449,7 +449,7 @@
                         <li>Free Tool & Genertors</li>
                     </ul>
                     <div>
-                        <a href="#" id="button">Contact Hubspot Support</a>
+                        <a href="#" class="button">Contact Hubspot Support</a>
                     </div>
                     <nav class="social">
                         <ul>
@@ -466,11 +466,25 @@
         <!--end first line-->
 
         <!--second line-->
-        <div class="second-line "></div>
+        <div class="second-line">
+            <div class="wrap">
+                <nav class="languages">
+                    <ul>
+                        <li>English</li>
+                        <li>Deutsch</li>
+                        <li>日本語</li>
+                        <li>Español</li>
+                        <li>Português</li>
+                        <li>Français</li>
+                    </ul>
+                </nav>
+                <span class="line"></span>
+            </div>
+        </div>
         <!--end second line-->
 
         <!--third line-->
-        <div class="third-line "></div>
+        <div class="third-line"></div>
          <!--end third line-->
         </div>
     </footer>
