--- a/index.html
+++ b/index.html
@@ -483,9 +483,22 @@
         </div>
         <!--end second line-->
 
-        <!--third line-->
-        <div class="third-line"></div>
-         <!--end third line-->
+        <!--copyright-->
+        <div class="copyright">
+            <nav class="wrap clearfix">
+                <div class="col menu-left">
+                    <img src="img/hslogo_gray.svg" alt="">
+                    <p>Copyright 2019 HubSpot, Inc.</p>
+                </div>
+                <div class="col menu-right">
+                    <ul>
+                        <li>Legal Stuff</li>
+                        <li>Privacy Policy</li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+         <!--end copyright-->
         </div>
     </footer>
     <!--FINE FOOTER-->
